Just change contact title

--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ http://www.templatemo.com/tm-472-blaster
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 text-center">
-				<h1 class="heading bold">CONTACT ME</h1>
-				<h2 class="subheading">Get in touch?</h2>
+				<h1 class="heading bold">GET IN TOUCH?</h1>
+				<h2 class="subheading">Contact Me</h2>
 			</div>
 		</div>
 		<div class="row">
