--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ http://www.templatemo.com/tm-472-blaster
 			</button>
 			<div class="contact-info-box col-md-4 col-sm-4 col-xs-6 wow fadeInUp" data-wow-delay="1s">
 				<i class="fa fa-map-marker"></i>
-					<h3>jakarta, Indonesia</h3>
+					<h3>Jakarta, Indonesia</h3>
 			</div>
 		</div>
 		<!-- <div class="row">
