--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ http://www.templatemo.com/tm-472-blaster
 				<hr>
 				<h3><span class="bold">Portfolio</h3>
 				<h1 class="heading">Muhamad Riadi Almasyariqi</h1>
-				<h4><span class="bold">a Passionate Mobile Developer</h4>
+				<h4><span class="bold">a Software Engineer specialize at Mobile Application</h4>
 				<a href="#portfolio" style="margin-right: 5px;" class="smoothScroll btn btn-default">Portfolio</a>
 				<a target="_blank" href="https://drive.google.com/file/d/111e7t1MTuhx6vAyXHvjtdxaNbuPQlArA/view?usp=sharing" style="margin-left: 5px;" class="smoothScroll btn btn-default">CV</a>
 			</div>
