--- a/mobiles/adhiuin.html
+++ b/mobiles/adhiuin.html
@@ -29,11 +29,13 @@
           flex-direction: column;
         "
       >
+      <a target="_blank" href="../images/mobiles/adhiuin.png">
         <img
           src="../images/mobiles/adhiuin.png"
           style="width: 50vw"
           alt="Card image cap"
         />
+      </a>
         <div class="card-body" style="width: 50vw">
           <h4 class="card-title" style="margin-bottom: 20px; margin-top: 20px;">Adhi UIN Walisongo - Android App</h4>
           <p class="card-text">
@@ -41,7 +43,7 @@
             Karya (Persero) Tbk - Gedung Department - UIN Walisongo Semarang
             construction project. This App was use to help construction process
             like Shop Drawing distributions, Material Stocks Management, etc.</br></br>
-            Adhi UIN Walisongo is developed with Android Studio (Java).
+            Adhi UIN Walisongo is developed with Java (Android).
 
             Adhi UIN Walisongo App is no longer in use and has been pull out from Google Play Store because the Construction Project has Finished.
           </p>
