--- a/mobiles/salestraxx.html
+++ b/mobiles/salestraxx.html
@@ -29,11 +29,13 @@
           flex-direction: column;
         "
       >
+      <a target="_blank" href="../images/mobiles/salestraxx.png">
         <img
           src="../images/mobiles/salestraxx.png"
           style="width: 50vw"
           alt="Card image cap"
         />
+      </a>
         <div class="card-body" style="width: 50vw">
           <h4 class="card-title" style="margin-bottom: 20px; margin-top: 20px;">Salestraxx</h4>
           <p class="card-text">
