--- a/websites/sentralpinjaman-compro.html
+++ b/websites/sentralpinjaman-compro.html
@@ -29,11 +29,13 @@
           flex-direction: column;
         "
       >
+      <a target="_blank" href="../images/websites/sentralpinjaman_compro.png">
         <img
           src="../images/websites/sentralpinjaman_compro.png"
           style="width: 50vw"
           alt="Card image cap"
         />
+      </a>
         <div class="card-body" style="width: 50vw">
           <h4 class="card-title" style="margin-bottom: 20px; margin-top: 20px;">Sentral Pinjaman - Company Profile</h4>
           <p class="card-text">
