--- a/mobiles/butuhapa.html
+++ b/mobiles/butuhapa.html
@@ -40,7 +40,7 @@
           <h4 class="card-title" style="margin-bottom: 20px; margin-top: 20px;">Butuhapa (Unfinished/On Going Project)</h4>
           <p class="card-text">
             This is my personal project (on going/unfinished). I can't tell you much about this project, but basically this project contains some complex features like pick location on maps, search location and save it, some complex forms and data flow, and so on.
-            </br></br>I created this app with <b>Flutter (Dart)</b>.</br></br>
+            </br></br>This app can run both on Android and iOS.</br>I created this app with <b>Flutter (Dart)</b>.</br></br>
 
             You can make a request to try this app on <b>Android</b> by clicking on the button below:</br></br>
             <a href="https://drive.google.com/file/d/100cIKYpSBHzZ0A3MXjroXPUBeEisR72e/view?usp=sharing" target="_blank" class="btn btn-primary">Request To Try</a>
